added attributes to movieresponsedto
